# svm-hackyeah

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pull-request.yaml
.streamlit/: config.toml
src/svm_hack/: __init__.py
src/svm_hack/app/: InvestMate.py  app.py  llm.py  schema.py
src/svm_hack/app/llms/: __init__.py  product_helper.py
src/svm_hack/app/models/: __init__.py  config.py  finance_products.py
src/svm_hack/app/pages/: 1_Asytent_Produktów.py
src/svm_hack/app/plotting/: __init__.py  calculate_interest.py  plots.py
src/svm_hack/app/utils/: logger.py  st_dtypes.py
