[project]
name = "svm-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wozniakos10", email = "wozniakos10@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.69.0",
    "plotly>=6.0.1",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.0",
]

[project.scripts]
svm-hack = "svm_hack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.2",
]
